# mirror_your-mobile-friend

./: .env.example  .gitignore  Konsep Aplikasi Web __Mirror__ – Teman Curhat AI Personal (2025).docx  README.md  capacitor.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/api/: package.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20250211_init/: migration.sql
apps/api/prisma/migrations/20250309_add_mood_entry_source/: migration.sql
apps/api/src/: app.module.ts  main.ts
apps/api/src/health/: health.controller.ts
apps/api/src/metrics/: metrics.controller.ts  metrics.service.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/types/: express.d.ts
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  routes-manifest.json
apps/web/public/: manifest.json  sw.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: chat-playground.tsx  emotion-watcher.tsx
apps/web/src/hooks/: useMirrorProfile.ts  useMirrorSession.ts  useMoodJournal.ts  useMoodSummary.ts  usePaymentSessions.ts
apps/web/src/lib/: guardrail-logger.ts  safety-policies.ts  sentry.client.ts
docs/: architecture.md  backlog-mvp.md  gap-analysis.md  incident-response.md  install-android.md  install-desktop.md  install-ios.md  install-pwa.md  mirror-concept.txt  monetization.md  observability.md  premium-onboarding.md  roadmap.md
docs/branding-kit/: README.md
services/ai/: README.md  pyproject.toml
services/ai/src/mirror_ai/: __init__.py  main.py
(+32 files in other folders)
